namespace java com.froad.thrift.vo


/**
 * TaskActorVo
 */
struct TaskActorVo {
    1: optional string taskId,    /** taskId */
    2: optional string actorId    /** actorId */
}
